Linear Regression Consulting Project

--- a/03_sparkLinearRegression.ipynb
+++ b/03_sparkLinearRegression.ipynb
@@ -1264,9 +1264,681 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eWzMi52GmjwV",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Consulting Project"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9mm7IFv0imEB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "spark = SparkSession.builder.appName('cruise').getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cFHoT8Z0x33_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df = spark.read.csv('cruise_ship_info.csv',inferSchema=True,header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8ZidAyekyHwQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "outputId": "22a05f67-d503-416a-afca-167ad643bf61"
+      },
+      "source": [
+        "df.printSchema()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- Ship_name: string (nullable = true)\n",
+            " |-- Cruise_line: string (nullable = true)\n",
+            " |-- Age: integer (nullable = true)\n",
+            " |-- Tonnage: double (nullable = true)\n",
+            " |-- passengers: double (nullable = true)\n",
+            " |-- length: double (nullable = true)\n",
+            " |-- cabins: double (nullable = true)\n",
+            " |-- passenger_density: double (nullable = true)\n",
+            " |-- crew: double (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "njXnDt78yL-8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "0b222c58-d205-422c-c8ee-5058c835b635"
+      },
+      "source": [
+        "df.head(5)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(Ship_name='Journey', Cruise_line='Azamara', Age=6, Tonnage=30.276999999999997, passengers=6.94, length=5.94, cabins=3.55, passenger_density=42.64, crew=3.55),\n",
+              " Row(Ship_name='Quest', Cruise_line='Azamara', Age=6, Tonnage=30.276999999999997, passengers=6.94, length=5.94, cabins=3.55, passenger_density=42.64, crew=3.55),\n",
+              " Row(Ship_name='Celebration', Cruise_line='Carnival', Age=26, Tonnage=47.262, passengers=14.86, length=7.22, cabins=7.43, passenger_density=31.8, crew=6.7),\n",
+              " Row(Ship_name='Conquest', Cruise_line='Carnival', Age=11, Tonnage=110.0, passengers=29.74, length=9.53, cabins=14.88, passenger_density=36.99, crew=19.1),\n",
+              " Row(Ship_name='Destiny', Cruise_line='Carnival', Age=17, Tonnage=101.353, passengers=26.42, length=8.92, cabins=13.21, passenger_density=38.36, crew=10.0)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LhpJqgityQZa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 476
+        },
+        "outputId": "abf8a8fc-5c3e-4644-8a9b-44500269fa8a"
+      },
+      "source": [
+        "df.groupBy('Cruise_line').count().show()"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----------------+-----+\n",
+            "|      Cruise_line|count|\n",
+            "+-----------------+-----+\n",
+            "|            Costa|   11|\n",
+            "|              P&O|    6|\n",
+            "|           Cunard|    3|\n",
+            "|Regent_Seven_Seas|    5|\n",
+            "|              MSC|    8|\n",
+            "|         Carnival|   22|\n",
+            "|          Crystal|    2|\n",
+            "|           Orient|    1|\n",
+            "|         Princess|   17|\n",
+            "|        Silversea|    4|\n",
+            "|         Seabourn|    3|\n",
+            "| Holland_American|   14|\n",
+            "|         Windstar|    3|\n",
+            "|           Disney|    2|\n",
+            "|        Norwegian|   13|\n",
+            "|          Oceania|    3|\n",
+            "|          Azamara|    2|\n",
+            "|        Celebrity|   10|\n",
+            "|             Star|    6|\n",
+            "|  Royal_Caribbean|   23|\n",
+            "+-----------------+-----+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wZ3Rnt6iys5a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import StringIndexer"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a8WMq1m2y5M0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "e073d78d-af33-476b-c57c-1ae6283c74c8"
+      },
+      "source": [
+        "# dealing with string categorical value\n",
+        "indexer = StringIndexer(inputCol='Cruise_line',\n",
+        "                        outputCol='cruise_cat')\n",
+        "indexed = indexer.fit(df).transform(df)\n",
+        "indexed.head(1)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(Ship_name='Journey', Cruise_line='Azamara', Age=6, Tonnage=30.276999999999997, passengers=6.94, length=5.94, cabins=3.55, passenger_density=42.64, crew=3.55, cruise_cat=16.0)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mj6TESAZzK1y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.linalg import Vectors\n",
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zj-1wXNXzpkM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "outputId": "b3dd6f7e-2d5f-4585-a270-3ef68378eb5a"
+      },
+      "source": [
+        "indexed.columns"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Ship_name',\n",
+              " 'Cruise_line',\n",
+              " 'Age',\n",
+              " 'Tonnage',\n",
+              " 'passengers',\n",
+              " 'length',\n",
+              " 'cabins',\n",
+              " 'passenger_density',\n",
+              " 'crew',\n",
+              " 'cruise_cat']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vraVgNWzzrWd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assembler = VectorAssembler(inputCols=['Age','Tonnage','passengers',\n",
+        "                                      'length','cabins','passenger_density',\n",
+        "                                      'cruise_cat'],outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KmdjVwPq0DwG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "output = assembler.transform(indexed)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DnjzGvJ_0HWe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 495
+        },
+        "outputId": "58075e1f-cd94-4330-f605-bf5211a3e8a7"
+      },
+      "source": [
+        "output.select('features','crew').show()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+--------------------+----+\n",
+            "|            features|crew|\n",
+            "+--------------------+----+\n",
+            "|[6.0,30.276999999...|3.55|\n",
+            "|[6.0,30.276999999...|3.55|\n",
+            "|[26.0,47.262,14.8...| 6.7|\n",
+            "|[11.0,110.0,29.74...|19.1|\n",
+            "|[17.0,101.353,26....|10.0|\n",
+            "|[22.0,70.367,20.5...| 9.2|\n",
+            "|[15.0,70.367,20.5...| 9.2|\n",
+            "|[23.0,70.367,20.5...| 9.2|\n",
+            "|[19.0,70.367,20.5...| 9.2|\n",
+            "|[6.0,110.23899999...|11.5|\n",
+            "|[10.0,110.0,29.74...|11.6|\n",
+            "|[28.0,46.052,14.5...| 6.6|\n",
+            "|[18.0,70.367,20.5...| 9.2|\n",
+            "|[17.0,70.367,20.5...| 9.2|\n",
+            "|[11.0,86.0,21.24,...| 9.3|\n",
+            "|[8.0,110.0,29.74,...|11.6|\n",
+            "|[9.0,88.5,21.24,9...|10.3|\n",
+            "|[15.0,70.367,20.5...| 9.2|\n",
+            "|[12.0,88.5,21.24,...| 9.3|\n",
+            "|[20.0,70.367,20.5...| 9.2|\n",
+            "+--------------------+----+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9U6SfbPU0NJf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = output.select('features','crew')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pp3yLg9V0b2K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_data,test_data = final_data.randomSplit([0.7,0.3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8z_epYSw0t8i",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "outputId": "06d9779e-4a17-48f1-b871-2789578d9250"
+      },
+      "source": [
+        "train_data.describe().show()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-------+------------------+\n",
+            "|summary|              crew|\n",
+            "+-------+------------------+\n",
+            "|  count|               111|\n",
+            "|   mean|  8.14846846846848|\n",
+            "| stddev|3.4716687625296263|\n",
+            "|    min|              0.59|\n",
+            "|    max|              21.0|\n",
+            "+-------+------------------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CSvZ9GcQ0w8A",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "outputId": "b3fa6ab9-d94f-4240-be98-e1719b793174"
+      },
+      "source": [
+        "test_data.describe().show()"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-------+------------------+\n",
+            "|summary|              crew|\n",
+            "+-------+------------------+\n",
+            "|  count|                47|\n",
+            "|   mean| 6.957446808510638|\n",
+            "| stddev|3.4718491928310096|\n",
+            "|    min|              0.59|\n",
+            "|    max|              13.6|\n",
+            "+-------+------------------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gTGh5J2r09XE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.regression import LinearRegression"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jD23Uo8F0z8-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ship_lr = LinearRegression(labelCol='crew')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nivCUrV80746",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "trained_ship_model = ship_lr.fit(train_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "govv88fu1KzE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ship_results = trained_ship_model.evaluate(test_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "icj87Raj1QyE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e4b2c4e2-3f42-47fa-f163-d2fc51d3cc2f"
+      },
+      "source": [
+        "ship_results.rootMeanSquaredError"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9368135183272176"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TT021vte1VQF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "89c67141-8a69-42bc-aa52-9f06e6be15da"
+      },
+      "source": [
+        "ship_results.r2"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9256082766745981"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qFBMFRsx1aKM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "46c1431a-d92b-40be-ad71-38893f426e36"
+      },
+      "source": [
+        "ship_results.meanSquaredError"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.87761956812062"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YPLSgEXk1rXM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "39cb7d27-7e3f-4cb0-f362-9a9c5e9d3da4"
+      },
+      "source": [
+        "ship_results.meanAbsoluteError"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6535560954726377"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7bgzApH91us-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# validating results\n",
+        "from pyspark.sql.functions import corr"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kTguOuSl184r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "dbd02f8d-6fdf-4bd2-fbb6-25185296bf63"
+      },
+      "source": [
+        "df.select(corr('crew','passengers')).show()"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+----------------------+\n",
+            "|corr(crew, passengers)|\n",
+            "+----------------------+\n",
+            "|    0.9152341306065384|\n",
+            "+----------------------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A6izuffm2GB4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "bc71879e-a9a5-4996-fe68-ed6cd362568d"
+      },
+      "source": [
+        "df.select(corr('crew','cabins')).show()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+------------------+\n",
+            "|corr(crew, cabins)|\n",
+            "+------------------+\n",
+            "|0.9508226063578497|\n",
+            "+------------------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "64P6Ikc22MBK",
         "colab_type": "code",
         "colab": {}
       },
